# planetary-neuron

./: BUILD_NOTES.md  CMakeLists.txt  COMPACTION_HANDOFF_JAN4.md  LETTER_TO_NEXT_INSTANCE.md
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/java/ai/jackknife/planetary/: MainActivity.kt
android/app/src/main/java/ai/jackknife/planetary/mesh/: PlanetaryMeshManager.kt  VendorModelHandler.kt
android/app/src/main/java/ai/jackknife/planetary/training/: ContinuumBridge.kt  GradientAggregator.kt  ShardCoordinator.kt
cli/: __init__.py  ble_mesh.py  claudia_bridge.sh  planetary_cli.py  requirements.txt  training_monitor.py  vendor_model.py
continuum/organs/hands/: __init__.py  core.py
continuum/organs/hands/actions/: __init__.py  file_ops.py  git_ops.py
continuum/organs/hands/safety/: __init__.py  audit.py  sandbox.py
continuum/organs/immune/: __init__.py  core.py
continuum/organs/immune/governors/: __init__.py  dead_man_switch.py  energy_budget.py  rate_limiter.py
continuum/organs/immune/monitors/: __init__.py  cycle_detector.py  resonance_monitor.py
include/: hw_scheduler.h  learning_engine.h  light_controller.h  mesh_gossip.h  neuron_config.h  weight_shard.h
src/core/: main.cpp
src/flash/: persistence.cpp
